--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -10,10 +10,61 @@
 </div>
 <ul class="nav nav-stacked">
 <li class="active">
-    <a href="index.html">
+    <a href="/">
         <i class="icon-dashboard"></i>
-        <span>Dashboard</span>
+        <span>控制面板</span>
     </a>
+</li>
+<li class="active">
+    <a href="/">
+        <i class="icon-user"></i>
+        <span>账号资源</span>
+    </a>
+</li>
+<li class="active">
+    <a href="/">
+        <i class="icon-edit"></i>
+        <span>内容管理</span>
+    </a>
+</li>
+<li class="active">
+    <a href="/home/sms">
+        <i class="icon-phone"></i>
+        <span>短信营销</span>
+    </a>
+</li>
+<li class="active">
+    <a href="/home/email">
+        <i class="icon-envelope"></i>
+        <span>邮件营销</span>
+    </a>
+</li>
+
+<li class="">
+    <a class="dropdown-collapse" href="#">
+        <i class="icon-th"></i>
+        <span>分类信息</span>
+        <i class="icon-angle-down angle-down"></i>
+    </a>
+    <ul class="nav nav-stacked">
+        <li class="">
+            <a href="form_styles.html">
+                <i class="icon-caret-right"></i>
+                <span>58同城</span>
+            </a>
+        </li>
+        <li class="">
+            <a href="form_components.html">
+                <i class="icon-caret-right"></i>
+                <span>赶集网</span>
+            </a>
+        </li>
+        <li class="">
+            <a href="validations.html">
+                <i class="icon-caret-right"></i>
+                <span>百姓网</span>
+            </a>
+    </ul>
 </li>
 <li class="">
     <a class="dropdown-collapse" href="#">
