--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,29 +1,1 @@
-<div class="tabbable tabs-left">
-  <% index = 0 %>
-  <ul class="nav nav-tabs">
-		<% if @tags && @tags.any? %>
-			<% tag_cloud(@tags, %w(css1 css2 css3 css4)) do |tag, css_class| %>
-			  <li class="<%=index == 0 ? 'active' : ''%>">
-			    <a href="#r<%=index%>" data-toggle="tab">
-			      <%= tag.name%>
-			      <span class="badge badge-<%=get_rand_css%>"><%=tag.count %></span>
-			    </a>
-				</li>
-			  <% index += 1 %>
-			<% end %>
-		<% end %>
-  </ul>
-
-  <% index = 0 %>
-  <div class="tab-content">
-    <% if @tags && @tags.any? %>
-			<% tag_cloud(@tags, %w(css1 css2 css3 css4)) do |tag, css_class| %>
-			  <div class="tab-pane <%=index == 0 ? 'active' : ''%>" id="r<%=index%>">
-		      <%#= link_to tag.name, {:controller => :site_items, :action => :tag, :id => tag.name }, :class => css_class %>
-		      <%=render  :partial => "/site_items/tag", :locals => {:tag_name => tag.name} %>
-		    </div>
-		    <% index += 1 %>
-			<% end %>
-		<% end %>
-  </div>
-</div>
+<%= current_user.name %>
