--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,16 +1,58 @@
-<div class="row-fluid">
-	<div class="span10">
-<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-vertical' }) do |f| %>
-  <%= f.error_notification %>
-  <%= display_base_errors resource %>
-  <%= f.input :name, :autofocus => true %>
-  <%= f.input :email, :required => true %>
-  <%= f.input :password, :required => true %>
-  <%= f.input :password_confirmation, :required => true %>
-  <%= f.button :submit, :class => 'btn-primary' %>
-<% end %>
+<div id='wrapper'>
+<div class='application'>
+    <div class='application-content'>
+        <a href="sign_in.html"><div class='icon-heart'></div>
+            <span><%= Rails.application.name %></span>
+        </a>
+    </div>
 </div>
-<div class="span2 text-right">
-<%= render "devise/shared/links" %>
+<div class='controls'>
+    <div class='caret'></div>
+    <div class='form-wrapper'>
+        <h1 class='text-center'>用户注册</h1>
+        <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => 'form-vertical' }) do |f| %>
+        		<%= f.error_notification %>
+  					<%= display_base_errors resource %>
+            <div class='row-fluid'>
+                <div class='span12 icon-over-input'>
+                    <input autofocus="autofocus" class="span12" id="user_name" name="user[name]" placeholder="用户名称" type="text">
+                    <i class='icon-user muted'></i>
+                </div>
+            </div>
+
+            <div class='row-fluid'>
+                <div class='span12 icon-over-input'>
+                    <input class="span12 email required" id="user_email" name="user[email]" placeholder="输入电子邮件"  type="email" value="">
+                    <i class='icon-envelope muted'></i>
+                </div>
+            </div>
+
+            <div class='row-fluid'>
+                <div class='span12 icon-over-input'>
+                    <input class="span12 password required" id="user_password" name="user[password]" placeholder="输入6..12位密码"  type="password">
+                    <i class='icon-lock muted'></i>
+                </div>
+            </div>
+            <div class='row-fluid'>
+                <div class='span12 icon-over-input'>
+                  <input class="span12 password required" id="user_password_confirmation" name="user[password_confirmation]" placeholder="密码确认" size="50" type="password">
+                    <i class='icon-lock muted'></i>
+                </div>
+            </div>
+            <label class="checkbox" for="agreement"><input id="agreement" name="agreement" type="checkbox" value="1" />
+                我同意
+                <a href="#" class="text-contrast">用户使用协议</a>
+            </label>
+            <button class="btn btn-block" name="button" type="submit">提 交</button>
+        <% end %>
+        <div class='text-center'>
+            <hr class='hr-normal'>
+            <%= render "devise/shared/links" %>
+        </div>
+    </div>
+</div>
+<div class='login-action text-center'>
+    
 </div>
 </div>
+
