--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
             <div class="container-fluid">
                 <a class="brand" href="index.html">
                     <i class="icon-heart-empty"></i>
-                    <span class="hidden-phone">Flatty</span>
+                    <span class="hidden-phone"><%= Rails.application.name %></span>
                 </a>
                 <a class="toggle-nav btn pull-left" href="#">
                     <i class="icon-reorder"></i>
@@ -160,7 +160,7 @@
                     <li class="dropdown dark user-menu">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                             <img alt="Mila Kunis" height="23" src="/assets/avatar.jpg" width="23">
-                            <span class="user-name hidden-phone">Mila Kunis</span>
+                            <span class="user-name hidden-phone"><%=current_user.name %></span>
                             <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
@@ -178,10 +178,10 @@
                             </li>
                             <li class="divider"></li>
                             <li>
-                                <a href="/sign_in.html">
+                            <%= link_to destroy_user_session_path,  :method=>'delete', :title => "退出", :confirm => "确定要退出?" do%>
                                     <i class="icon-signout"></i>
-                                    Sign out
-                                </a>
+                                    退出
+                            <% end %>
                             </li>
                         </ul>
                     </li>
