--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,25 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta http-equiv="Content-Language" content="zh-CN" />
-    <meta name="robots" content="INDEX,FOLLOW" />
-    <meta name="author" content="master@inruby.com" />
-    <!-- this enables responsive features in browser -->
-    <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
+  <%=render :partial => 'layouts/head' %>
 
-    <title><%= content_for?(:title) ? yield(:title) : "雨服务" %></title>
-    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "雨服务" %>">
-
-    <%= stylesheet_link_tag "application" %>
-    <%= javascript_include_tag "application" %>
-    <!-- if you are going to support IE8 you must include html5shiv -->
-    <!--[if lt IE 9]>
-      <script src='assets/javascripts/html5shiv.js' type='text/javascript'></script>
-    <![endif]-->
-    <%= csrf_meta_tags %>
-    <%= yield(:head) %>
-  </head>
   <body class="wysihtml5-supported contrast-red">
     <%= render :partial => 'layouts/header' %>
     <div id="wrapper">
@@ -29,6 +11,7 @@
         <div class="container-fluid">
           <div class="row-fluid" id="content-wrapper">
             <div class="span12">
+              <%= render 'layouts/messages' %>
               <%= yield %>
             </div>
           </div>
