--- a/app/views/home/sms.html.erb
+++ b/app/views/home/sms.html.erb
@@ -1,19 +1,12 @@
-<div class="group-header">
-    <div class="row-fluid">
-        <div class="span6 offset3">
-            <div class="text-center">
-                <h2>短信发布管理</h2>
-            </div>
-        </div>
-    </div>
-</div>
+ <h2>短信发布管理</h2>
+
 
 <div class="row-fluid">
 	<div class="span4 box box-bordered box-nomargin">
 	  <div class="box-header">
 	      <div class="title">
 	          <i class="icon-comments"></i>
-	          Comments
+	          统计信息
 	      </div>
 	      <div class="actions">
 	          <a href="#" class="btn box-remove btn-mini btn-link"><i class="icon-remove"></i>
@@ -26,57 +19,102 @@
 	      <div class="span12">
 	          <div class="box-content box-statistic">
 	              <h3 class="title text-error">91</h3>
-	              <small>New</small>
+	              <small>号码总数</small>
 	              <div class="text-error icon-plus align-right"></div>
 	          </div>
 	          <div class="box-content box-statistic">
 	              <h3 class="title text-success">1</h3>
-	              <small>Approved</small>
+	              <small>发送成功</small>
 	              <div class="text-success icon-ok align-right"></div>
 	          </div>
 	          <div class="box-content box-statistic">
 	              <h3 class="title text-info">123</h3>
-	              <small>Pending</small>
+	              <small>发送失败</small>
 	              <div class="text-info icon-time align-right"></div>
 	          </div>
 	      </div>
 	  </div>
 	</div>
 
-	<div class="span4 box box-bordered box-nomargin">
-	  <div class="box-header blue-background">
-	      <div class="title">Bordered</div>
-	      <div class="actions">
-	          <a href="#" class="btn box-remove btn-mini btn-link"><i class="icon-remove"></i>
-	          </a>
-	          <a href="#" class="btn box-collapse btn-mini btn-link"><i></i>
-	          </a>
-	      </div>
-	  </div>
-	  <div class="box-content">
-	      Dicta ea nihil voluptas ab repellat debitis et aperiam ut explicabo qui alias velit accusantium omnis tempora maiores ratione unde accusamus.
-	  </div>
-	</div>
+    <!--短信内容列表 start-->
+    <div class='span4 box box-bordered box-nomargin'>
+        <div class='box-header'>
+            <div class='title'>Green</div>
+            <div class='actions'>
+                <a href="#" class="btn box-remove btn-mini btn-link"><i class='icon-remove'></i>
+                </a>
+                <a href="#" class="btn box-collapse btn-mini btn-link"><i></i>
+                </a>
+            </div>
+        </div>
+        <div class='box-content'>
+            <div class='accordion accordion-green' id='accordion2' style='margin-bottom:0;'>
+                <div class='accordion-group'>
+                    <div class='accordion-heading'>
+                        <a class='accordion-toggle' data-parent='#accordion2' data-toggle='collapse' href='#collapseOne-accordion2'>
+                            Vero nam
+                        </a>
+                    </div>
+                    <div class='accordion-body collapse in' id='collapseOne-accordion2'>
+                        <div class='accordion-inner'>
+                            Molestiae incidunt porro ad occaecati maxime sint dolor non error qui nesciunt sunt qui quisquam reiciendis omnis ea iure dolores qui et.
+                        </div>
+                    </div>
+                </div>
+                <div class='accordion-group'>
+                    <div class='accordion-heading'>
+                        <a class='accordion-toggle' data-parent='#accordion2' data-toggle='collapse' href='#collapseTwo-accordion2'>
+                            Sit nemo ducimus laborum
+                        </a>
+                    </div>
+                    <div class='accordion-body collapse' id='collapseTwo-accordion2'>
+                        <div class='accordion-inner'>
+                            Molestiae incidunt porro ad occaecati maxime sint dolor non error qui nesciunt sunt qui quisquam reiciendis omnis ea iure dolores qui et.
+                        </div>
+                    </div>
+                </div>
+                <div class='accordion-group'>
+                    <div class='accordion-heading'>
+                        <a class='accordion-toggle' data-parent='#accordion2' data-toggle='collapse' href='#collapseThree-accordion2'>
+                            Dicta cumque perspiciatis.
+                        </a>
+                    </div>
+                    <div class='accordion-body collapse' id='collapseThree-accordion2'>
+                        <div class='accordion-inner'>
+                            Molestiae incidunt porro ad occaecati maxime sint dolor non error qui nesciunt sunt qui quisquam reiciendis omnis ea iure dolores qui et.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div><!--短信内容列表 end-->
 
-	<div class="span4 box box-bordered box-nomargin">
-	  <div class="box-header purple-background">
-	      <div class="title">Scrollable</div>
-	      <div class="actions">
-	          <a href="#" class="btn box-remove btn-mini btn-link"><i class="icon-remove"></i>
-	          </a>
-	          <a href="#" class="btn box-collapse btn-mini btn-link"><i></i>
-	          </a>
-	      </div>
-	  </div>
-	  <div class="box-content">
-	      <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 78px;"><div class="scrollable" data-scrollable-height="78" data-scrollable-start="top" style="overflow: hidden; width: auto; height: 78px;">
-	          Rem est ipsa vel facilis non quam officiis aliquam possimus mollitia in corrupti autem ut sapiente minus maxime sit velit sed qui explicabo est inventore adipisci consequuntur voluptate debitis sed error et id et reiciendis recusandae cupiditate assumenda autem voluptatem aut enim tempore praesentium tempora alias itaque temporibus odit commodi est 
-	      </div><div class="slimScrollBar ui-draggable" style="background-color: rgb(0, 0, 0); width: 7px; position: absolute; top: 48px; opacity: 0.4; display: none; border-top-left-radius: 7px; border-top-right-radius: 7px; border-bottom-right-radius: 7px; border-bottom-left-radius: 7px; z-index: 99; right: 1px; height: 30px; background-position: initial initial; background-repeat: initial initial;"></div><div class="slimScrollRail" style="width: 7px; height: 100%; position: absolute; top: 0px; display: none; border-top-left-radius: 7px; border-top-right-radius: 7px; border-bottom-right-radius: 7px; border-bottom-left-radius: 7px; background-color: rgb(51, 51, 51); opacity: 0.2; z-index: 90; right: 1px; background-position: initial initial; background-repeat: initial initial;"></div></div>
-	  </div>
-	</div>
+
+    <div class="span4 box box-bordered box-nomargin">
+      <div class="box-header blue-background">
+          <div class="title">编辑短信模板</div>
+          <div class="actions">
+              <a href="#" class="btn box-remove btn-mini btn-link"><i class="icon-remove"></i>
+              </a>
+              <a href="#" class="btn box-collapse btn-mini btn-link"><i></i>
+              </a>
+          </div>
+      </div>
+      <div class="box-content">
+          Dicta ea nihil voluptas ab repellat debitis et aperiam ut explicabo qui alias velit accusantium omnis tempora maiores ratione unde accusamus.
+      </div>
+    </div>
+
+    
+
+	
 </div>
 
 <hr class="hr-double">
+
+<%= render :partial => "components/fileupload" %>
+
+<!-- datatable -->
 <div class='row-fluid'>
 <div class='span12 box bordered-box orange-border' style='margin-bottom:0;'>
 <div class='box-header purple-background'>
